Implemented GET /distribution-centers/{id}/shipments, added additional filters to GET /shipments, and created unit tests - #129
