# swagger.yaml
@@ -265,6 +265,16 @@ paths:
           description: Status of the shipments to be returned
           required: false
           type: string
+        - name: did
+          in: query
+          description: Distribution center ID of the shipments to be returned
+          required: false
+          type: string
+        - name: rid
+          in: query
+          description: Retailer ID of the shipments to be returned
+          required: false
+          type: string
       tags:
         - Shipment
       responses:
@@ -470,6 +480,45 @@ paths:
           description: Distribution center retrieved successfully
           schema:
             $ref: '#/definitions/DistributionCenter'
+        401:
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/Error'
+        404:
+          description: Distribution center does not exist
+          schema:
+            $ref: '#/definitions/Error'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  '/distribution-centers/{id}/shipments':
+    get:
+      summary: Retrieve shipments for a specific distribution center
+      parameters:
+        - name: Authorization
+          in: header
+          description: Bearer token
+          required: true
+          type: string
+        - name: id
+          in: path
+          description: ID of the distribution center for which shipments are to be retrieved
+          required: true
+          type: string
+        - name: status
+          in: query
+          description: Status of the shipments to be returned
+          required: false
+          type: string
+      tags:
+        - DistributionCenter
+        - Shipment
+      responses:
+        200:
+          description: Shipments retrieved successfully
+          schema:
+            $ref: '#/definitions/Shipment'
         401:
           description: Unauthorized
           schema:
